--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
         "stdio.h": "c",
         "unistd.h": "c",
         "pthread.h": "c",
-        "inet.h": "c"
+        "inet.h": "c",
+        "common.h": "c"
     },
     "git.ignoreLimitWarning": true
 }
