--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
         "unistd.h": "c",
         "pthread.h": "c",
         "inet.h": "c",
-        "common.h": "c"
+        "common.h": "c",
+        "stat.h": "c"
     },
     "git.ignoreLimitWarning": true
 }
